--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -229,25 +229,11 @@ jobs:
       - name: Decompress code coverage reports
         run: '7z x -aoa aggregated-code-coverage-report.zip'
 
-      - name: Install Node Modules (root)
-        uses: bahmutov/npm-install@v1
+      - name: Coveralls
+        uses: coverallsapp/github-action@1.1.3
         with:
-          install-command: npm ci
-        env:
-          CHROMEDRIVER_FILEPATH: "/usr/bin/chromedriver"
-
-      - name: Publish to Coveralls.io
-        continue-on-error: true
-#        if: github.ref == 'refs/heads/main'
-        run: npm run coverage:publish
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-
-#      - name: Coveralls
-#        uses: coverallsapp/github-action@1.1.3
-#        with:
-#          github-token: ${{ secrets.GITHUB_TOKEN }}
-#          path-to-lcov: 'target/coverage/lcov.info'
+          github-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          path-to-lcov: 'target/coverage/lcov.info'
 
   #
   # NPM artifact publishing
