--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -232,7 +232,22 @@ jobs:
       - name: Coveralls
         uses: coverallsapp/github-action@1.1.3
         with:
-          github-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          github-token: ${{ github.token }}
+          path-to-lcov: 'target/coverage/lcov.info'
+
+      - name: CodeClimate
+        uses: paambaati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageLocations: |
+            ${{github.workspace}}/target/coverage/lcov.info:lcov
+          debug: true
+
+      - name: CodeClimate
+        uses: coverallsapp/github-action@1.1.3
+        with:
+          github-token: ${{ github.token }}
           path-to-lcov: 'target/coverage/lcov.info'
 
   #
