--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -221,6 +221,10 @@ jobs:
     needs:
       - coverage-report
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
+
       - name: Download code coverage reports
         uses: actions/download-artifact@v2
         with:
