ci(github): refactored the pipeline to use reusable workflows (#1273)

--- a/integration/protractor-cucumber/.nycrc.yml
+++ b/integration/protractor-cucumber/.nycrc.yml
@@ -1,16 +1,16 @@
 extends: '../../.nycrc.yml'
 cwd: '../../packages'
-reportDir: '../target/coverage/integration-webdriverio-web'
+reportDir: '../target/coverage/integration-protractor-web'
 tempDir: '../.nyc_output'
 include:
   - 'core/src/**/*.ts'
   - 'core/lib/**/*.js'
-  - 'mocha/src/**/*.ts'
-  - 'mocha/lib/**/*.js'
+  - 'cucumber/src/**/*.ts'
+  - 'cucumber/lib/**/*.js'
+  - 'protractor/src/**/*.ts'
+  - 'protractor/lib/**/*.js'
   - 'web/src/**/*.ts'
   - 'web/lib/**/*.js'
-  - 'webdriverio/src/**/*.ts'
-  - 'webdriverio/lib/**/*.js'
 exclude:
   - '**/target/**'
   - '**/spec/**'
