--- a/integration/jasmine/.nycrc.yml
+++ b/integration/jasmine/.nycrc.yml
@@ -1,16 +1,12 @@
 extends: '../../.nycrc.yml'
 cwd: '../../packages'
-reportDir: '../target/coverage/integration-protractor-web'
+reportDir: '../target/coverage/integration-jasmine'
 tempDir: '../.nyc_output'
 include:
   - 'core/src/**/*.ts'
   - 'core/lib/**/*.js'
-  - 'mocha/src/**/*.ts'
-  - 'mocha/lib/**/*.js'
-  - 'protractor/src/**/*.ts'
-  - 'protractor/lib/**/*.js'
-  - 'web/src/**/*.ts'
-  - 'web/lib/**/*.js'
+  - 'jasmine/src/**/*.ts'
+  - 'jasmine/lib/**/*.js'
 exclude:
   - '**/target/**'
   - '**/spec/**'
