ci(codeclimate): disable debug output since it's no longer needed

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -246,13 +246,7 @@ jobs:
         with:
           coverageLocations: |
             ${{github.workspace}}/target/coverage/lcov.info:lcov
-          debug: true
-
-      - name: CodeClimate
-        uses: coverallsapp/github-action@1.1.3
-        with:
-          github-token: ${{ github.token }}
-          path-to-lcov: 'target/coverage/lcov.info'
+          debug: false
 
   #
   # NPM artifact publishing
