--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -5,6 +5,8 @@ plugins:
     channel: "eslint-8"
     config:
       config: .eslintrc.yml
+      extensions:
+        - ".ts"
 
 exclude_patterns:
   - "documentation/**"
