ci(github): corrected workflow configuration

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,6 +30,7 @@ jobs:
         integration/**
         *
       files-ignore: |
+        documentation/**
         *.md
         package-lock.json
 
@@ -38,7 +39,7 @@ jobs:
     needs:
       - detect-website-changes
       - detect-source-code-changes
-    if: needs.detect-website-changes.outputs.only_modified == 'true' || needs.detect-source-code-changes.outputs.only_modified == 'true'
+    if: needs.detect-website-changes.outputs.only_modified == 'true' || needs.detect-source-code-changes.outputs.any_changed == 'true'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
       node-version: 16.x
@@ -49,7 +50,7 @@ jobs:
     name: 'Compile'
     needs:
       - detect-source-code-changes
-    if: needs.detect-source-code-changes.outputs.only_modified == 'true'
+    if: needs.detect-source-code-changes.outputs.any_changed == 'true'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
       node-version: 16.x
@@ -311,7 +312,7 @@ jobs:
       - detect-website-changes
       - detect-source-code-changes
       - artifacts-publish
-    if: ${{ needs.detect-website-changes.outputs.only_modified == 'true' || (needs.detect-source-code-changes.outputs.only_modified == 'true' && needs.artifacts-publish.result == 'success') }}
+    if: ${{ needs.detect-website-changes.outputs.only_modified == 'true' || (needs.detect-source-code-changes.outputs.any_changed == 'true' && needs.artifacts-publish.result == 'success') }}
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
       node-version: 16.x
