--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,11 +26,11 @@ jobs:
       files: |
         .github/**
         bin/**
+        !documentation/**
         packages/**
         integration/**
         *
       files-ignore: |
-        documentation/**
         *.md
         package-lock.json
 
