ci(github): corrected workflow configuration

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,6 +31,7 @@ jobs:
         integration/**
         *
       files-ignore: |
+        documentation/**
         *.md
         package-lock.json
 
