--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,7 +40,7 @@ jobs:
     needs:
       - detect-website-changes
       - detect-source-code-changes
-    if: needs.detect-website-changes.outputs.any_changed == 'true' || needs.detect-source-code-changes.outputs.any_changed == 'true'
+    if: needs.detect-website-changes.outputs.has_changes == 'true' || needs.detect-source-code-changes.outputs.has_changes == 'true'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
       node-version: 16.x
@@ -51,7 +51,7 @@ jobs:
     name: 'Compile'
     needs:
       - detect-source-code-changes
-    if: needs.detect-source-code-changes.outputs.any_changed == 'true'
+    if: needs.detect-source-code-changes.outputs.has_changes == 'true'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
       node-version: 16.x
@@ -313,7 +313,7 @@ jobs:
       - detect-website-changes
       - detect-source-code-changes
       - artifacts-publish
-    if: ${{ needs.detect-website-changes.outputs.any_changed == 'true' || (needs.detect-source-code-changes.outputs.any_changed == 'true' && needs.artifacts-publish.result == 'success') }}
+    if: ${{ needs.detect-website-changes.outputs.has_changes == 'true' || (needs.detect-source-code-changes.outputs.has_changes == 'true' && needs.artifacts-publish.result == 'success') }}
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
       node-version: 16.x
