--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,14 +14,14 @@ jobs:
 
   detect-website-changes:
     name: 'Detect website changes'
-    uses: 'serenity-js/serenity-js/.github/workflows/main-detect-changes.yaml@fix/website-deps'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-detect-changes.yaml@main'
     with:
       files: |
         documentation/**
 
   detect-source-code-changes:
     name: 'Detect source code and configuration changes'
-    uses: 'serenity-js/serenity-js/.github/workflows/main-detect-changes.yaml@fix/website-deps'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-detect-changes.yaml@main'
     with:
       files: |
         .github/**
