chore(website): corrected CSS so that the logo displays properly in the API docs plus fix to website build (#1281)
* docs(website): corrected CSS so that the logo displays properly in the API docs

re #1197

* ci(website): corrected workflow configuration

so that the website can be built independently when there are no other code changes

--- a/.github/workflows/main-detect-changes.yaml
+++ b/.github/workflows/main-detect-changes.yaml
@@ -20,12 +20,21 @@ on:
         default: ""
 
     outputs:
+      has_changes:
+        description: Returns if any changes to the specified list of files have been detected
+        value: ${{ jobs.detect-changes.outputs.has_changes }}
+
+      # From https://github.com/tj-actions/changed-files/blob/main/action.yml
+      # Naming and descriptions as per the original implementation
       all_modified_files:
         description: List of all copied, modified, added and deleted files.
         value: ${{ jobs.detect-changes.outputs.all_modified_files }}
       only_modified:
         description: Return true when all files provided using the files input have been modified.
         value: ${{ jobs.detect-changes.outputs.only_modified }}
+      any_changed:
+        description: Return true only when any files provided using the files input have changed.
+        value: ${{ jobs.detect-changes.outputs.any_changed }}
 
 permissions:
   contents: read
@@ -34,8 +43,10 @@ jobs:
   detect-changes:
     runs-on:  ubuntu-latest
     outputs:
+      has_changes: ${{ steps.changed-files.outputs.any_changed }}
       only_modified: ${{ steps.changed-files.outputs.only_modified }}
       all_modified_files: ${{ steps.changed-files.outputs.all_modified_files }}
+      any_changed: ${{ steps.changed-files.outputs.any_changed }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -50,12 +61,12 @@ jobs:
           files_ignore: ${{ inputs.files-ignore }}
 
       - name: Summary (no changes)
-        if: steps.changed-files.outputs.only_modified == 'false'
+        if: steps.changed-files.outputs.any_changed == 'false'
         run: |
           echo "No changes detected" >> $GITHUB_STEP_SUMMARY
 
       - name: Summary (changes detected)
-        if: steps.changed-files.outputs.only_modified == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             echo "- $file" >> $GITHUB_STEP_SUMMARY
