ci(gitpod): enabled gitpod integration

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,6 +32,8 @@ jobs:
         *
       files-ignore: |
         .github/workflows/chore*.yaml
+        .gitpod/**
+        .gitpod
         documentation/**
         *.md
         package-lock.json
