--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -44,5 +44,5 @@ github:
     pullRequests: true
     pullRequestsFromForks: true
     addCheck: prevent-merge-on-error
-    addComment: true
-    addBadge: false
+    addComment: false
+    addBadge: true
