ci(gitpod): ignore changes to gitpod.yml since they're checked by Gitpod

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,7 +33,7 @@ jobs:
       files-ignore: |
         .github/workflows/chore*.yaml
         .gitpod/**
-        .gitpod
+        .gitpod.yml
         documentation/**
         *.md
         package-lock.json
