ci(gitpod): use comments instead of badges

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -44,5 +44,5 @@ github:
     pullRequests: true
     pullRequestsFromForks: true
     addCheck: prevent-merge-on-error
-    addComment: false
-    addBadge: true
+    addComment: true
+    addBadge: false
