ci(github): better developer experience when committing changes (#1285)
Commitlint and Husky should make it easier for contributors to Serenity/JS to create commit messages
that follow the Conventional Commits format, which will then help to get pull requests merged
quicker.

Additionally, a new check added on GitHub will ensure that the commit format is valid
and  parseable by Semantic Release.

Related tickets: re #1183

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,11 +31,15 @@ jobs:
         integration/**
         *
       files-ignore: |
-        .github/workflows/chore*.yaml
+        .github/workflows/chore-*.yaml
+        .github/workflows/pr-*.yaml
         .gitpod/**
-        .gitpod
+        .gitpod.yml
+        .husky/**
         documentation/**
         *.md
+        .commitlintrc.js
+        .cz-*.js
         package-lock.json
 
   lint:
