--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,9 +8,9 @@ ports:
 
 tasks:
   - name: 'Install Node modules and compile Serenity/JS'
-    env:
-      CHROMEDRIVER_FILEPATH: /usr/lib/chromium-browser/chromedriver
     init: |
+        nvm install
+        nvm use
         make install compile
 
   - name: 'Install VSCode Extensions'
@@ -44,5 +44,5 @@ github:
     pullRequests: true
     pullRequestsFromForks: true
     addCheck: prevent-merge-on-error
-    addComment: false
-    addBadge: true
+    addComment: true
+    addBadge: false
