--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "coverage:merge": "bin/istanbul-merge.ts",
     "coverage:report": "nyc report --reporter=html --reporter=lcovonly --temp-directory=./target/coverage --report-dir=./target/coverage",
     "coverage:publish": "cat ./target/coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
-    "commit": "./node_modules/cz-customizable/standalone.js",
+    "commit": "bin/commit.ts",
     "lerna": "lerna",
     "lerna:bootstrap:all": "lerna bootstrap",
     "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies",
