--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -267,6 +267,8 @@ jobs:
   artifacts-publish:
     name: 'NPM: publish artifacts'
     if: github.ref == 'refs/heads/main'
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     needs:
       - test-linux-node-lts-active
