ci(gitpod): added the official Cucumber Open extension for VSCode

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -35,7 +35,7 @@ vscode:
     - EditorConfig.EditorConfig
     - dbaeumer.vscode-eslint
     - eamodio.gitlens
-    # - CucumberOpen.cucumber-official  # pending: https://github.com/cucumber/vscode/issues/98
+    - CucumberOpen.cucumber-official
 
 github:
   prebuilds:
