ci(gitpod): added a list of recommended VSCode extensions
recommended extensions should make it easier for people to get started with the project

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -32,10 +32,12 @@ tasks:
 
 vscode:
   extensions:
-    - EditorConfig.EditorConfig
+    - CucumberOpen.cucumber-official
     - dbaeumer.vscode-eslint
     - eamodio.gitlens
-    - CucumberOpen.cucumber-official
+    - EditorConfig.EditorConfig
+    - Gruntfuggly.todo-tree
+    - streetsidesoftware.code-spell-checker
 
 github:
   prebuilds:
