ci(github): ignore changes to vscode config
changes to vscode config don't affect the sourcecode and therefore don't require a full build

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,6 +36,7 @@ jobs:
         .gitpod/**
         .gitpod.yml
         .husky/**
+        .vscode/**
         documentation/**
         *.md
         .commitlintrc.js
