ci(gitpod): switch from gitpod comments to badges
badges should generate less noise than comments

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -46,5 +46,5 @@ github:
     pullRequests: true
     pullRequestsFromForks: true
     addCheck: prevent-merge-on-error
-    addComment: true
-    addBadge: false
+    addComment: false
+    addBadge: true
