test(core): reuse tsconfig.options.json across all the integration test modules
this should make it easier to enable esModulesInterop at the root level and have it applied to all
the modules

re #1240

--- a/integration/cucumber-1/tsconfig.json
+++ b/integration/cucumber-1/tsconfig.json
@@ -1,17 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "es2019",
-    "lib": ["es2019"],
-    "module": "commonjs",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "declaration": true,
-    "outDir": "./lib",
-    "types": [
-      "node"
-    ]
-  },
+  "extends": "../../tsconfig.options.json",
 
   "include": [
     "src/**/*.ts",
