--- a/integration/cucumber-specs/tsconfig.json
+++ b/integration/cucumber-specs/tsconfig.json
@@ -1,10 +1,7 @@
 {
+  "extends": "../../tsconfig.options.json",
+
   "compilerOptions": {
-    "target": "es2019",
-    "lib": ["es2019"],
-    "module": "commonjs",
-    "sourceMap": true,
-    "declaration": true,
     "outDir": "./lib"
   },
 
