--- a/integration/jasmine/tsconfig.json
+++ b/integration/jasmine/tsconfig.json
@@ -1,17 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "es2019",
-    "lib": ["es2019"],
-    "module": "commonjs",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "declaration": true,
-    "outDir": "./lib",
-    "types": [
-      "node"
-    ]
-  },
+  "extends": "../../tsconfig.options.json",
 
   "include": [
     "src/**/*.ts",
