--- a/integration/playwright-web/tsconfig.json
+++ b/integration/playwright-web/tsconfig.json
@@ -1,13 +1,12 @@
 {
+  "extends": "../../tsconfig.options.json",
+
   "compilerOptions": {
-    "target": "es2019",
     "lib": ["es2019", "dom"],
-    "module": "commonjs",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "declaration": true,
-    "outDir": "./lib"
+    "types": [
+      "node",
+      "chai-as-promised"
+    ]
   },
 
   "include": [
