--- a/integration/protractor-mocha/tsconfig.json
+++ b/integration/protractor-mocha/tsconfig.json
@@ -1,13 +1,8 @@
 {
+  "extends": "../../tsconfig.options.json",
+
   "compilerOptions": {
-    "target": "es2019",
     "lib": ["es2019", "dom"],
-    "module": "commonjs",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "declaration": true,
-    "outDir": "./lib",
     "types": [
       "node",
       "chai-as-promised"
