--- a/integration/webdriverio-mocha/tsconfig.json
+++ b/integration/webdriverio-mocha/tsconfig.json
@@ -1,13 +1,7 @@
 {
+  "extends": "../../tsconfig.options.json",  
   "compilerOptions": {
-    "target": "es2019",
     "lib": ["es2019", "dom"],
-    "module": "commonjs",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "declaration": true,
-    "outDir": "./lib",
     "types": [
       "node",
       "webdriverio/async",
@@ -17,8 +11,5 @@
 
   "include": [
     "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
