fix(core): enabled support for synthetic default imports and ES module interop
This is to enable Playwright Test runner to use Serenity/JS modules, as Playwright Test uses Babel
instead of ts-node

Related tickets: #1240

--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -6,6 +6,8 @@
     ],
     "module": "commonjs",
     "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "declaration": true,
