--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -48,7 +48,7 @@
     "tiny-types": "^1.19.0"
   },
   "peerDependencies": {
-    "playwright-core": "^1.25.2"
+    "playwright-core": "1.26.0"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
@@ -56,7 +56,7 @@
     "@types/mocha": "^9.1.1",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "playwright-core": "1.25.2",
+    "playwright-core": "1.26.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
