fix(core): activity is now able to detect invocation location on Node 14
Serenity/JS should support Node LTS-1 just as well as LTS and LTS+1

Related tickets: re #1240

--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -84,6 +84,7 @@
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "mocha": "^10.0.0",
+    "nyc": "15.1.0",
     "mocha-testdata": "^1.2.0",
     "puppeteer-core": "^16.2.0",
     "start-server-and-test": "^1.14.0",
