--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "istanbul-lib-coverage": "^3.2.0",
     "lerna": "^5.4.3",
     "mocha-testdata": "^1.2.0",
-    "nyc": "^15.1.0",
+    "nyc": "15.1.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.7",
     "sinon": "^14.0.0",
