--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,6 +52,7 @@
     "assertion-error-formatter": "^3.0.0",
     "memfs": "^3.4.7",
     "mocha": "^10.0.0",
+    "nyc": "15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
