--- a/packages/jasmine/package.json
+++ b/packages/jasmine/package.json
@@ -54,6 +54,7 @@
     "@types/mocha": "^9.1.1",
     "jasmine": "^3.99.0",
     "mocha": "^10.0.0",
+    "nyc": "15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
