--- a/packages/local-server/package.json
+++ b/packages/local-server/package.json
@@ -67,6 +67,7 @@
     "express": "^4.18.1",
     "koa": "^2.13.4",
     "mocha": "^10.0.0",
+    "nyc": "15.1.0",
     "restify": "^8.6.1",
     "semver": "^7.3.7",
     "ts-node": "^10.9.1",
