--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -55,7 +55,7 @@
     "@types/chai": "^4.3.3",
     "@types/mocha": "^9.1.1",
     "mocha": "^10.0.0",
-    "nyc": "^15.1.0",
+    "nyc": "15.1.0",
     "playwright-core": "1.26.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
