--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -91,6 +91,7 @@
     "express": "^4.18.1",
     "html-minifier": "^4.0.0",
     "mocha": "^10.0.0",
+    "nyc": "15.1.0",
     "protractor": "^7.0.0",
     "selenium-webdriver": "^3.6.0",
     "start-server-and-test": "^1.14.0",
