--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -55,6 +55,7 @@
     "@types/mocha": "^9.1.1",
     "axios-mock-adapter": "^1.21.2",
     "mocha": "^10.0.0",
+    "nyc": "15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
