--- a/packages/serenity-bdd/package.json
+++ b/packages/serenity-bdd/package.json
@@ -65,6 +65,7 @@
     "if-env": "^1.0.4",
     "memfs": "^3.4.7",
     "mocha": "^10.0.0",
+    "nyc": "15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
