chore(gitpod): tweaked VS Code code indent to make the project tree menu easier to read

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "files.autoSave": "onFocusChange",
   "workbench.startupEditor": "readme",
+  "workbench.tree.indent": 12,
   "gitlens.showWelcomeOnInstall": false,
   "gitlens.showWhatsNewAfterUpgrades": false,
   "cucumber.features": [
