--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -48,7 +48,7 @@
     "tiny-types": "^1.19.0"
   },
   "peerDependencies": {
-    "playwright-core": "1.26.1"
+    "playwright-core": "^1.27.0"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
