--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "compile:@documentation": "lerna run compile --stream --scope '@documentation/*'",
     "test": "lerna run test --stream --scope @serenity-js/*",
     "integration-test:all": "lerna run test --stream --concurrency 1 --scope @integration/*",
+    "integration-test:all:cucumber": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-*",
+    "integration-test:all:playwright": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
+    "integration-test:all:protractor": "lerna run test --stream --concurrency 1 --scope @integration/protractor-*",
+    "integration-test:all:webdriverio": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-*",
     "integration-test:cucumber-1": "lerna run test --stream --scope @integration/cucumber-1",
     "integration-test:cucumber-2": "lerna run test --stream --scope @integration/cucumber-2",
     "integration-test:cucumber-3": "lerna run test --stream --scope @integration/cucumber-3",
@@ -45,10 +49,16 @@
     "integration-test:cucumber-8": "lerna run test --stream --scope @integration/cucumber-8",
     "integration-test:jasmine": "lerna run test --stream --concurrency 1 --scope @integration/jasmine",
     "integration-test:mocha": "lerna run test --stream --concurrency 1 --scope @integration/mocha",
-    "integration-test:playwright": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
-    "integration-test:protractor": "lerna run test --stream --concurrency 1 --scope @integration/protractor-*",
-    "integration-test:webdriverio": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-*",
-    "integration-test:webdriverio-web": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-web",
+    "integration-test:playwright-test": "lerna run test --stream --scope @integration/playwright-test",
+    "integration-test:playwright-web": "lerna run test --stream --scope @integration/playwright-web",
+    "integration-test:protractor-cucumber": "lerna run test --stream --scope @integration/protractor-cucumber",
+    "integration-test:protractor-jasmine": "lerna run test --stream --scope @integration/protractor-jasmine",
+    "integration-test:protractor-mocha": "lerna run test --stream --scope @integration/protractor-mocha",
+    "integration-test:protractor-web": "lerna run test --stream --scope @integration/protractor-web",
+    "integration-test:webdriverio-cucumber": "lerna run test --stream --scope @integration/webdriverio-cucumber",
+    "integration-test:webdriverio-jasmine": "lerna run test --stream --scope @integration/webdriverio-jasmine",
+    "integration-test:webdriverio-mocha": "lerna run test --stream --scope @integration/webdriverio-mocha",
+    "integration-test:webdriverio-web": "lerna run test --stream --scope @integration/webdriverio-web",
     "site": "lerna run site --stream --scope '@documentation/*'",
     "report": "npm run coverage:merge && npm run coverage:report",
     "coverage:merge": "bin/istanbul-merge.ts",
