--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -189,6 +189,7 @@ jobs:
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
       command: |
+        mkdir target && \
         npx --yes playwright install --with-deps && \
         make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test
       upload-artifact-name: 'test-integration-coverage-reports-playwright'
