ci(github): corrected artifact names

--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "compile:@documentation": "lerna run compile --stream --scope '@documentation/*'",
     "test": "lerna run test --stream --scope @serenity-js/*",
     "integration-test:all": "lerna run test --stream --concurrency 1 --scope @integration/*",
-    "integration-test:all:cucumber": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-*",
-    "integration-test:all:playwright": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
-    "integration-test:all:protractor": "lerna run test --stream --concurrency 1 --scope @integration/protractor-*",
-    "integration-test:all:webdriverio": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-*",
+    "integration-test:all-cucumber": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-*",
+    "integration-test:all-playwright": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
+    "integration-test:all-protractor": "lerna run test --stream --concurrency 1 --scope @integration/protractor-*",
+    "integration-test:all-webdriverio": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-*",
     "integration-test:cucumber-1": "lerna run test --stream --scope @integration/cucumber-1",
     "integration-test:cucumber-2": "lerna run test --stream --scope @integration/cucumber-2",
     "integration-test:cucumber-3": "lerna run test --stream --scope @integration/cucumber-3",
